# ruporograph

./: .gitignore  App.toml  Cargo.toml  Config.toml  README.md
src/: app.rs  config.rs  config.toml  ctx.rs  database.rs  graphql.rs  helpers.rs  main.rs  routes.rs  user.rs
src/business/: user.rs
src/graphql/: mod.rs  schema.rs  user.rs
src/migrations/: mod.rs
src/migrations/release_0/: install.rs  uninstall.rs
src/router/: mod.rs  routes.rs
