[package]
name = "rust_graphql_server"
version = "0.1.0"
authors = ["yann <yann@yineo.fr"]

[dependencies]
postgres = "0.15"
r2d2 = "0.8.2"
r2d2_postgres = "0.14.0"
toml = "0.4.7"
serde_derive = "1.0.37"
serde = "1.0.37"
rocket = "0.3.16"
rocket_codegen = "0.3.16"
juniper = "0.10"
juniper_rocket = "0.1.3"
config = "0.9"

